--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="bar-left-side">
-            <img src="/img/logo.png" width="150px" height="50px">
+            <img src="img/logo.png" width="150px" height="50px">
             <div class="bar_actions">
                 <span class="material-icons-outlined">
                     notifications
