--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <input type="text" placeholder="Search">
             </div>
             <div class="user">
-                <img src="/img/profile-pic.png" width="40px" height="40px" class="perfil">
+                <img src="img/profile-pic.png" width="40px" height="40px" class="perfil">
                 <div class="estado"></div>
             </div>
 
