--- a/index.html
+++ b/index.html
@@ -122,25 +122,25 @@
                 <h4>Your Shortcuts</h4>
                 <div class="sections">
                     <a>
-                        <img src="/img/shortcut-1.png" height="35px" width="35px">
+                        <img src="img/shortcut-1.png" height="35px" width="35px">
                         <span>Web Developers</span>
                     </a>
                 </div>
                 <div class="sections">
                     <a>
-                        <img src="/img/shortcut-2.png" height="35px" width="35px">
+                        <img src="img/shortcut-2.png" height="35px" width="35px">
                         <span>Web Design Course</span>
                     </a>
                 </div>
                 <div class="sections">
                     <a>
-                        <img src="/img/shortcut-3.png" height="35px" width="35px">
+                        <img src="img/shortcut-3.png" height="35px" width="35px">
                         <span>Full Stack Deveplopment</span>
                     </a>
                 </div>
                 <div class="sections">
                     <a>
-                        <img src="/img/shortcut-4.png" height="35px" width="35px">
+                        <img src="img/shortcut-4.png" height="35px" width="35px">
                         <span>Website Experts</span>
                     </a>
                 </div>
@@ -151,34 +151,34 @@
         <div class="mid">
             <div class="status">
                 <div class="caja">
-                    <img src="/img/status-1.png" class="profile">
-                    <img src="/img/upload.png" width="30px" height="30px" class="history_image">
+                    <img src="img/status-1.png" class="profile">
+                    <img src="img/upload.png" width="30px" height="30px" class="history_image">
                     <span>Post Story</span>
                 </div>
                 <div class="caja">
-                    <img src="/img/status-2.png" class="profile">
-                    <img src="/img/member-1.png" width="28px" height="28px" class="pic">
+                    <img src="img/status-2.png" class="profile">
+                    <img src="img/member-1.png" width="28px" height="28px" class="pic">
                     <span>Allison</span>
                 </div>
                 <div class="caja">
-                    <img src="/img/status-3.png" class="profile">
-                    <img src="/img/member-2.png" width="28px" height="28px" class="pic">
+                    <img src="img/status-3.png" class="profile">
+                    <img src="img/member-2.png" width="28px" height="28px" class="pic">
                     <span>Jackson</span>
                 </div>
                 <div class="caja">
-                    <img src="/img/status-4.png" class="profile">
-                    <img src="/img/member-3.png" width="28px" height="28px" class="pic">
+                    <img src="img/status-4.png" class="profile">
+                    <img src="img/member-3.png" width="28px" height="28px" class="pic">
                     <span>Samona</span>
                 </div>
                 <div class="caja">
-                    <img src="/img/status-5.png" class="profile">
-                    <img src="/img/member-4.png" width="28px" height="28px" class="pic">
+                    <img src="img/status-5.png" class="profile">
+                    <img src="img/member-4.png" width="28px" height="28px" class="pic">
                     <span>Samona</span>
                 </div>
             </div>
             <div class="share">
                 <div>
-                    <img src="/img/profile-pic.png" width="40px" height="40px" style="border-radius: 100px;">
+                    <img src="img/profile-pic.png" width="40px" height="40px" style="border-radius: 100px;">
                 </div>
                 <div class="info">
                     <b><span>John Nicholson</span> </b>
@@ -216,7 +216,7 @@
                 <div class="head">
                     <div class="izquierda">
                         <div class="imagen">
-                            <img src="/img/member-3.png" width="40px" height="40px">
+                            <img src="img/member-3.png" width="40px" height="40px">
                         </div>
                         <div class="data">
                             <p style="font-weight: bold;">Samona Rose</p>
@@ -234,7 +234,7 @@
                         to watch more videos on website deveplopment and UI designs
                         <b style="color: rgb(56, 138, 196);"> #EasyTutorials #YoutubeChannel</b>
                     </p>
-                    <img src="/img/feed-image-1.png" height="300px" width="550px" class="feed-image-1">
+                    <img src="img/feed-image-1.png" height="300px" width="550px" class="feed-image-1">
                 </div>
                 <div class="feet">
                     <div class="reactions">
@@ -272,7 +272,7 @@
                 <div class="head">
                     <div class="izquierda">
                         <div class="imagen">
-                            <img src="/img/profile-pic.png" width="40px" height="40px">
+                            <img src="img/profile-pic.png" width="40px" height="40px">
                         </div>
                         <div class="data">
                             <p style="font-weight: bold;">John Nicholson</p>
@@ -291,7 +291,7 @@
                         facebook page on your post. Ask your doubts in the comments
                         <b style="color: rgb(56, 138, 196);"> #EasyTutorials #YoutubeChannel</b>
                     </p>
-                    <img src="/img/feed-image-2.png" height="300px" width="550px" class="feed-image-1">
+                    <img src="img/feed-image-2.png" height="300px" width="550px" class="feed-image-1">
                 </div>
                 <div class="feet">
                     <div class="reactions">
@@ -329,7 +329,7 @@
                 <div class="head">
                     <div class="izquierda">
                         <div class="imagen">
-                            <img src="/img/profile-pic.png" width="40px" height="40px">
+                            <img src="img/profile-pic.png" width="40px" height="40px">
                         </div>
                         <div class="data">
                             <p style="font-weight: bold;">John Nicholson</p>
@@ -348,7 +348,7 @@
                         facebook page on your post. Ask your doubts in the comments
                         <b style="color: rgb(56, 138, 196);"> #EasyTutorials #YoutubeChannel</b>
                     </p>
-                    <img src="/img/feed-image-3.png" height="300px" width="550px" class="feed-image-1">
+                    <img src="img/feed-image-3.png" height="300px" width="550px" class="feed-image-1">
                 </div>
                 <div class="feet">
                     <div class="reactions">
@@ -386,7 +386,7 @@
                 <div class="head">
                     <div class="izquierda">
                         <div class="imagen">
-                            <img src="/img/profile-pic.png" width="40px" height="40px">
+                            <img src="img/profile-pic.png" width="40px" height="40px">
                         </div>
                         <div class="data">
                             <p style="font-weight: bold;">John Nicholson</p>
@@ -405,7 +405,7 @@
                         facebook page on your post. Ask your doubts in the comments
                         <b style="color: rgb(56, 138, 196);"> #EasyTutorials #YoutubeChannel</b>
                     </p>
-                    <img src="/img/feed-image-4.png" height="300px" width="550px" class="feed-image-1">
+                    <img src="img/feed-image-4.png" height="300px" width="550px" class="feed-image-1">
                 </div>
                 <div class="feet">
                     <div class="reactions">
@@ -443,7 +443,7 @@
                 <div class="head">
                     <div class="izquierda">
                         <div class="imagen">
-                            <img src="/img/profile-pic.png" width="40px" height="40px">
+                            <img src="img/profile-pic.png" width="40px" height="40px">
                         </div>
                         <div class="data">
                             <p style="font-weight: bold;">John Nicholson</p>
@@ -462,7 +462,7 @@
                         facebook page on your post. Ask your doubts in the comments
                         <b style="color: rgb(56, 138, 196);"> #EasyTutorials #YoutubeChannel</b>
                     </p>
-                    <img src="/img/feed-image-5.png" height="300px" width="550px" class="feed-image-1">
+                    <img src="img/feed-image-5.png" height="300px" width="550px" class="feed-image-1">
                 </div>
                 <div class="feet">
                     <div class="reactions">
@@ -542,7 +542,7 @@
                 <div>Close</div>
             </div>
             <div class="advertisement">
-                <img src="/img/advertisement.png" width="250px" height="150px">
+                <img src="img/advertisement.png" width="250px" height="150px">
             </div>
             <br>
             <div class="title">
@@ -554,21 +554,21 @@
                 <br>
                 <div class="chat">
                     <div class="imagen">
-                        <img src="/img/member-1.png" width="40px" height="40px">
+                        <img src="img/member-1.png" width="40px" height="40px">
                         <div class="punto"></div>
                     </div>
                     <span>Allison Mina</span>
                 </div>
                 <div class="chat">
                     <div class="imagen">
-                        <img src="/img/member-2.png" width="40px" height="40px">
+                        <img src="img/member-2.png" width="40px" height="40px">
                         <div class="punto"></div>
                     </div>
                     <span>Jackson Aston</span>
                 </div>
                 <div class="chat">
                     <div class="imagen">
-                        <img src="/img/member-3.png" width="40px" height="40px">
+                        <img src="img/member-3.png" width="40px" height="40px">
                         <div class="punto"></div>
                     </div>
                     <span>Samona Rose</span>
